# autodetect-pdf-fields

./: .gitignore  Cargo.toml  Dockerfile  README.md  railway.json
.github/workflows/: release.yml
scripts/: download_model.sh
server/: README.md  auth.ts  detect.ts  index.ts  package.json  router.ts
src/: cli.rs  debug.rs  error.rs  geometry.rs  labeler.rs  lib.rs  main.rs  output.rs
src/detection/: confidence_boost.rs  line_filter.rs  mod.rs  orchestrator.rs  type_classifier.rs  underscore_fields.rs
src/model/: inference.rs  mod.rs  nmm.rs  nms.rs  postprocessing.rs  preprocessing.rs
src/pdf/: document.rs  line_extraction.rs  mod.rs  renderer.rs  text_extraction.rs
